add slideshow css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -720,6 +720,33 @@ input, select, textarea {
 
 		}
 
+/* Slideshow */
+
+		* {box-sizing:border-box}
+		
+		/* Slideshow container */
+		.slideshow-container {
+		  max-width: 1000px;
+		  position: relative;
+		  margin: auto;
+		}
+		
+		/* Hide the images by default */
+		.mySlides {
+		  display: none;
+		}
+		
+		/* Fading animation */
+		.fade {
+		  animation-name: fade;
+		  animation-duration: 1.5s;
+		}
+		
+		@keyframes fade {
+		  from {opacity: .4}
+		  to {opacity: 1}
+		}
+
 /* List */
 
 	ol {
