up the margins on the slideshow container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -728,7 +728,7 @@ input, select, textarea {
 		.slideshow-container {
 		  max-width: 1000px;
 		  position: relative;
-		  margin: auto;
+		  margin: 25px;
 		}
 		
 		/* Hide the images by default */
