--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -735,23 +735,25 @@ input, select, textarea {
 		
 		/* Hide the images by default */
 		.mySlides1 {
-		  display: none;
+			display: none;
+			border-radius: 4px;
 		}
 
 		/* Hide the images by default */
 		.mySlides2 {
-		  display: none;
+			display: none;
+			border-radius: 4px;
 		}
 
 		/* Fading animation */
 		.fade {
-		  animation-name: fade;
-		  animation-duration: 1.5s;
+			animation-name: fade;
+			animation-duration: 1.5s;
 		}
 		
 		@keyframes fade {
-		  from {opacity: .4}
-		  to {opacity: 1}
+			from {opacity: .4}
+			to {opacity: 1}
 		}
 
 /* List */
