--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -749,6 +749,8 @@ input, select, textarea {
 		.fade {
 			animation-name: fade;
 			animation-duration: 1.5s;
+			border-radius: 4px;
+
 		}
 		
 		@keyframes fade {
