--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -742,6 +742,7 @@ input, select, textarea {
 		/* Hide the images by default */
 		.mySlides2 {
 			display: none;
+			padding-top: 0px;
 			border-radius: 4px;
 		}
 
