--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1043,6 +1043,16 @@ input, select, textarea {
 	input[type="reset"],
 	input[type="button"],
 	button,
+	.nav {
+		border:none;
+		border-bottom: solid 1px #ffffff;
+		width: -moz-max-content;
+		width: -webkit-max-content;
+		width: -ms-max-content;
+		width: max-content;
+		padding-bottom: 0.5rem;
+		margin: 0 0 2rem 0;
+	}
 	.button {
 		-moz-appearance: none;
 		-webkit-appearance: none;
