--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1330,12 +1330,17 @@ input, select, textarea {
 				display: none;
 			}
 
-		#header .logo {
+		#header .logo img {
 			size: 2.5rem;
 			margin: 0.25rem
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
+			margin-left: auto;
+			margin-right: auto;
+			width:12%;
+			margin-top:-40px;
+			margin-bottom:-25px;
 		}
 
 			#header .logo .icon:before {
