--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1332,15 +1332,12 @@ input, select, textarea {
 
 		#header .logo img {
 			size: 2.5rem;
-			margin: 0.25rem
-			line-height: 5.5rem;
-			border: solid 1px #ffffff;
-			border-radius: 100%;
+			margin: 0.25rem;
 			margin-left: auto;
 			margin-right: auto;
-			width:12%;
+			width:;
 			margin-top:-40px;
-			margin-bottom:-25px;
+			margin-bottom:-25%;
 		}
 
 			#header .logo .icon:before {
