--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -679,7 +679,7 @@ input, select, textarea {
 
 		.image.right {
 			float: right;
-			padding: 0 0 1em 1.5em;
+			padding: 0 0.5rem 1em 1.5em;
 			top: 0.25em;
 		}
 
@@ -1332,11 +1332,9 @@ input, select, textarea {
 
 		#header .logo img {
 			size: 2.5rem;
-			margin: 0.25rem;
 			margin-left: auto;
 			margin-right: auto;
-			width: 5rem;
-			margin-top: -40px;
+			margin-top: -20%;
 			margin-bottom: -25%;
 		}
 
