--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1331,7 +1331,7 @@ input, select, textarea {
 			}
 
 		#header .logo img {
-			size: 2.5rem;
+			size: 1em;
 			margin-left: auto;
 			margin-right: auto;
 			margin-top: -20%;
