--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1329,14 +1329,17 @@ input, select, textarea {
 			#header > :first-child:before {
 				display: none;
 			}
-
+		
+		#header .logo {
+			padding-bottom: 1rem;
+		}
+		
 		#header .logo img {
 			width: 25em;
 			height: 100%;
 			margin-left: auto;
 			margin-right: auto;
 			margin-top: -20%;
-			margin-bottom: -25%;
 		}
 
 			#header .logo .icon:before {
